{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 23,
  "lineage": "c49ac7dc-e244-3a71-3580-222d4f4704c0",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0858b880de393d6ca",
            "arn": "arn:aws:ec2:us-east-1:890742563616:elastic-ip/eipalloc-0858b880de393d6ca",
            "domain": "vpc",
            "id": "eipalloc-0858b880de393d6ca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-52-114-80.compute-1.amazonaws.com",
            "public_ip": "100.52.114.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e85ed219e928955",
            "arn": "arn:aws:ec2:us-east-1:890742563616:elastic-ip/eipalloc-08e85ed219e928955",
            "domain": "vpc",
            "id": "eipalloc-08e85ed219e928955",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-195-185-70.compute-1.amazonaws.com",
            "public_ip": "34.195.185.70",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:internet-gateway/igw-093fba4a323f3ae3d",
            "id": "igw-093fba4a323f3ae3d",
            "owner_id": "890742563616",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-igw"
            },
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0858b880de393d6ca",
            "association_id": "eipassoc-017ba6029ec1a2bd0",
            "connectivity_type": "public",
            "id": "nat-0558f8599fc4461aa",
            "network_interface_id": "eni-078bc2f98861e2510",
            "private_ip": "10.0.101.97",
            "public_ip": "100.52.114.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03451c9656b516b7d",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-nat-gw-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e85ed219e928955",
            "association_id": "eipassoc-08c50c6346165ac0c",
            "connectivity_type": "public",
            "id": "nat-0b11f19ceccc3eaaf",
            "network_interface_id": "eni-0d2596b8e5257eea6",
            "private_ip": "10.0.102.77",
            "public_ip": "34.195.185.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac9dabb4f0b02d27",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-nat-gw-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3eceec983f73bdd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0558f8599fc4461aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3eceec983f73bdd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_1",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018218890135dc50c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b11f19ceccc3eaaf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018218890135dc50c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_2",
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-093fba4a323f3ae3d",
            "id": "r-rtb-0ddf9c4382f2ae7d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ddf9c4382f2ae7d8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:route-table/rtb-0a3eceec983f73bdd",
            "id": "rtb-0a3eceec983f73bdd",
            "owner_id": "890742563616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:route-table/rtb-018218890135dc50c",
            "id": "rtb-018218890135dc50c",
            "owner_id": "890742563616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:route-table/rtb-0ddf9c4382f2ae7d8",
            "id": "rtb-0ddf9c4382f2ae7d8",
            "owner_id": "890742563616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0be3c67e4ff61b6",
            "route_table_id": "rtb-0a3eceec983f73bdd",
            "subnet_id": "subnet-05d9d13baa6e2cb38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0935ba11486fbae4c",
            "route_table_id": "rtb-018218890135dc50c",
            "subnet_id": "subnet-0f491677af9b0b89e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044bd0298cd2dad3b",
            "route_table_id": "rtb-0ddf9c4382f2ae7d8",
            "subnet_id": "subnet-03451c9656b516b7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09afff1e10badbf89",
            "route_table_id": "rtb-0ddf9c4382f2ae7d8",
            "subnet_id": "subnet-0ac9dabb4f0b02d27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:security-group/sg-02a0b7dc353538c31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a0b7dc353538c31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "turbovets-alb-sg",
            "name_prefix": "",
            "owner_id": "890742563616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:security-group/sg-0732bd3dec7e19132",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0732bd3dec7e19132",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02a0b7dc353538c31"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "turbovets-ecs-sg",
            "name_prefix": "",
            "owner_id": "890742563616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:subnet/subnet-05d9d13baa6e2cb38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d9d13baa6e2cb38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890742563616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-private-subnet-1"
            },
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:subnet/subnet-0f491677af9b0b89e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f491677af9b0b89e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890742563616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-private-subnet-2"
            },
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:subnet/subnet-03451c9656b516b7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03451c9656b516b7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890742563616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-public-subnet-1"
            },
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:subnet/subnet-0ac9dabb4f0b02d27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac9dabb4f0b02d27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890742563616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-public-subnet-2"
            },
            "vpc_id": "vpc-047313dd9ed12fe05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:890742563616:vpc/vpc-047313dd9ed12fe05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1cf61e66d2abc02",
            "default_route_table_id": "rtb-041ec9ebcded79f76",
            "default_security_group_id": "sg-0da9b75f59c3387aa",
            "dhcp_options_id": "dopt-0dfcd07d1fb28ca51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047313dd9ed12fe05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041ec9ebcded79f76",
            "owner_id": "890742563616",
            "tags": {
              "Environment": "dev",
              "Name": "turbovets-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "turbovets-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}